--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,10 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.1.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-dynamic-links-ktx:21.1.0'
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.1.2'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+
 }
